--- a/index.html
+++ b/index.html
@@ -3,6 +3,18 @@
   <head>
     <meta charset="utf-8" />
     <title>Merhaba Dünya</title>
+    <style>
+      body {
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 48px;
+        font-family: Arial, sans-serif;
+        background-color: #f5f5f5;
+        margin: 0;
+      }
+    </style>
   </head>
   <body>
     merhaba dünya
