--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ index kodları
             <details>
                 <summary>Ödev 1: </summary>
                 <div class="odev-icerik">
-                    <a href="#" target="_blank">Ödev Dosyalarına Git &rarr;</a>
+                    <a href="https://yunusemre7895123-cmd.github.io/web311/%C3%B6dev2.html" target="_blank">Ödev Dosyalarına Git &rarr;</a>
                 </div>
             </details>
 
@@ -195,4 +195,5 @@ index kodları
 
 </body>
 </html>
+
 
