--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ index kodları
             <details>
                 <summary>Ödev 3: </summary>
                 <div class="odev-icerik">
-                    <a href="#" target="_blank">Ödev Dosyalarına Git &rarr;</a>
+                    <a href="https://yunusemre7895123-cmd.github.io/web311/%C3%B6dev3.html" target="_blank">Ödev Dosyalarına Git &rarr;</a>
                 </div>
             </details>
             
@@ -195,6 +195,7 @@ index kodları
 
 </body>
 </html>
+
 
 
 
