--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
     <details>
       <summary>Ödev 4</summary>
-      <a href="#">Ödev Dosyalarına Git →</a>
+      <a href="https://yunusemre7895123-cmd.github.io/web311/%C3%B6dev4.html">Ödev Dosyalarına Git →</a>
     </details>
 
     <details>
@@ -168,3 +168,4 @@
       <summary>Ödev 6</summary>
       <a href="#">Ödev Dosyalarına Git →</a>
     </details>
+
