--- a/index.html
+++ b/index.html
@@ -161,12 +161,13 @@
 
     <details>
       <summary>Ödev 5</summary>
-      <a href="https://yunusemre7895123-cmd.github.io/web311/%C3%B6dev5.html">Ödev Dosyalarına Git →</a>
+      <a href="https://yunusemre7895123-cmd.github.io/web311/%C3%B6dev5/%C3%B6dev5.html">Ödev Dosyalarına Git →</a>
     </details>
 
     <details>
       <summary>Ödev 6</summary>
       <a href="#">Ödev Dosyalarına Git →</a>
     </details>
+
 
 
