--- a/index.html
+++ b/index.html
@@ -166,8 +166,9 @@
 
     <details>
       <summary>Ödev 6</summary>
-      <a href="#">Ödev Dosyalarına Git →</a>
+      <a href="https://yunusemre7895123-cmd.github.io/web311/%C3%96dev6/index.html">Ödev Dosyalarına Git →</a>
     </details>
+
 
 
 
