--- a/index.html
+++ b/index.html
@@ -168,6 +168,15 @@
       <summary>Ödev 6</summary>
       <a href="https://yunusemre7895123-cmd.github.io/web311/%C3%96dev6/index.html">Ödev Dosyalarına Git →</a>
     </details>
+    <details>
+      <summary>Ödev 7</summary>
+      <a href="">Ödev Dosyalarına Git →</a>
+    </details>
+    <details>
+      <summary>Ödev 8</summary>
+      <a href="">Ödev Dosyalarına Git →</a>
+    </details>
+  
 
 
 
