--- a/index.html
+++ b/index.html
@@ -170,13 +170,14 @@
     </details>
     <details>
       <summary>Ödev 7</summary>
-      <a href="">Ödev Dosyalarına Git →</a>
+      <a href="https://yunusemre7895123-cmd.github.io/web311/ödev7.php">Ödev Dosyalarına Git →</a>
     </details>
     <details>
       <summary>Ödev 8</summary>
       <a href="">Ödev Dosyalarına Git →</a>
     </details>
   
+
 
 
 
