--- a/index.html
+++ b/index.html
@@ -174,9 +174,10 @@
     </details>
     <details>
       <summary>Final</summary>
-      <a href="web311-kappa.vercel.app">Ödev Dosyalarına Git →</a>
+      <a href="https://web311-kappa.vercel.app">Ödev Dosyalarına Git →</a>
     </details>
   
+
 
 
 
